--- a/notebooks/case_study_gastrulation.ipynb
+++ b/notebooks/case_study_gastrulation.ipynb
@@ -678,7 +678,7 @@
    "id": "525aa628",
    "metadata": {},
    "source": [
-    "## Project the velocity onto the embedding space"
+    "## Project the RNA velocity onto the embedding space"
    ]
   },
   {
@@ -1178,7 +1178,7 @@
    "id": "79f1f5b8",
    "metadata": {},
    "source": [
-    "The long trajectories used for pseudotime dertermination are (optionally) shown. In this case, there are there long trajectories, which are colored from light to dark according to their own unadjusted pseudotime. The cells are colored according to the long trajectories that are used for determination of the pseudotime of the cells. "
+    "The long trajectories used for pseudotime dertermination are (optionally) shown. In this case, the three long trajectories are colored from light to dark according to their own unadjusted pseudotime. The cells are colored according to the long trajectories that are used for determination of the pseudotime of the cells. "
    ]
   },
   {
@@ -1406,7 +1406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.7.6 ('celldancer_env')",
    "language": "python",
    "name": "python3"
   },
@@ -1420,11 +1420,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.7.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "610c699f0cd8c4f129acd9140687fff6866bed0eb8e82f249fc8848b827b628c"
+    "hash": "a99a828e224165ef6ff74afd7967177ce2f279f30f5f9ef1db3758063b72efb9"
    }
   }
  },
