--- a/notebooks/case_study_hgforebrian.ipynb
+++ b/notebooks/case_study_hgforebrian.ipynb
@@ -5,7 +5,7 @@
    "id": "bf4d8915-49fc-4578-b5b2-abcdb9f44da1",
    "metadata": {},
    "source": [
-    "# cellDancer decodes the human embryo glutamatergic neurogenesis"
+    "# Decoding the human embryo glutamatergic neurogenesis"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "16d7af57-27ce-41ac-a6d3-2a90347b1fdb",
    "metadata": {},
    "source": [
-    "In this case tutorial, we analyzed the human embryo glutamatergic neurogenesis dataset previous used by [Gorin et al.](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010492). There are 1,054 genes and 1,720 cells in the preprocessed dataset."
+    "In this case tutorial, we analyzed the human embryo glutamatergic neurogenesis dataset previous used by [Gorin et al.](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010492) There are 1,054 genes and 1,720 cells in the preprocessed dataset."
    ]
   },
   {
@@ -494,7 +494,7 @@
    "id": "c80d9405-66e5-4100-ab1b-30e2fcf16378",
    "metadata": {},
    "source": [
-    "## CellDancer is insensitive to the methods of neighbor cells detection"
+    "## cellDancer is insensitive to the methods of neighbor cells detection"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "source": [
     "Here we estimated RNA velocities based on neighbor cells defined by both the spliced and unspliced abundances. A new UMAP embedding based on both the unspliced and spliced RNA abundances were generated.\n",
     "\n",
-    "The RNA velocities were predicted with the command below,\n",
+    "The RNA velocities were predicted with the command below.\n",
     "\n",
     "    cellDancer_df_u_s = cd.velocity(cell_type_u_s, permutation_ratio=0.3, max_epoches=150, norm_u_s = False, norm_cell_distribution = False, speed_up=False, patience=3)\n",
     "    \n",
@@ -803,6 +803,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73aacfe0",
+   "metadata": {},
+   "source": [
+    "Visualize velocity in the embedding space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "1b81ed34-4a75-4fb2-969c-c4e4f33cee8c",
@@ -866,7 +874,7 @@
    "id": "fcddc768",
    "metadata": {},
    "source": [
-    "Pseudotime is determined using the below parameters."
+    "Pseudotime is determined using the parameters below."
    ]
   },
   {
@@ -931,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.7.6 ('celldancer_env')",
    "language": "python",
    "name": "python3"
   },
@@ -945,11 +953,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.7.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "610c699f0cd8c4f129acd9140687fff6866bed0eb8e82f249fc8848b827b628c"
+    "hash": "a99a828e224165ef6ff74afd7967177ce2f279f30f5f9ef1db3758063b72efb9"
    }
   }
  },
