--- a/notebooks/case_study_pancreas_dynamo.ipynb
+++ b/notebooks/case_study_pancreas_dynamo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "cellDancer could be integrated into downstream analysis, such as [dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) proposed by [Qiu et al.](https://www.sciencedirect.com/science/article/pii/S0092867421015774#!)\n",
     "\n",
-    "In this tutorial, the output of cellDancer ([PancreaticEndocrinogenesis_cellDancer_estimation.csv](PancreaticEndocrinogenesis_cellDancer_estimation.csv)) in pancreatic endocrinogenesis is transferred to adata as dynamo input. We apply dynamo to (1) perform vector field analysis and (2) detect gene regulation with Jacobian analysis."
+    "In this tutorial, the output of cellDancer ([PancreaticEndocrinogenesis_cellDancer_estimation.csv](https://drive.google.com/file/d/1n_ZxAXuKB1BzcpIDkPj3XdOs-Ni45yD7/view?usp=sharing)) in pancreatic endocrinogenesis is transferred to adata as dynamo input. We apply dynamo to (1) perform vector field analysis and (2) detect gene regulation with Jacobian analysis."
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the cellDancer predicted RNA velocity to dynamo adata using the API `export_velocity_to_dynamo`."
+    "Import the cellDancer predicted RNA velocity to dynamo adata using the API `export_velocity_to_dynamo()`."
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project RNA velocity onto the embedding space"
+    "## Project the RNA velocity onto the embedding space"
    ]
   },
   {
@@ -616,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.6 ('celldancer_env')",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +634,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "b2f570aa1992b9261b765dacb4367d8c2634428d2aefe6c7bdec2c4f21000564"
+    "hash": "a99a828e224165ef6ff74afd7967177ce2f279f30f5f9ef1db3758063b72efb9"
    }
   },
   "widgets": {
