--- a/notebooks/case_study_pancreas.ipynb
+++ b/notebooks/case_study_pancreas.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "This tutorial shows how cellDancer derives cell fates in the embedding space. \n",
     "\n",
-    "This study also displays cellDancer's ability to decipher cell identity based on the cell-specific reaction rates.\n",
+    "This tutorial also displays cellDancer's ability to decipher cell identity based on the cell-specific reaction rates.\n",
     "\n",
     "Below is the case study for pancreatic endocrinogenesis. We follow the gene and cell filtering methods of [Bergen et.al](https://www.nature.com/articles/s41587-020-0591-3). 3,696 cells with 2,000 genes are selected. "
    ]
@@ -64,7 +64,7 @@
    "id": "5a99e119-7072-437d-8d93-1dcfb81c8e79",
    "metadata": {},
    "source": [
-    "## Load the result"
+    "## Load cellDancer result"
    ]
   },
   {
@@ -496,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.6 ('celldancer_env')",
    "language": "python",
    "name": "python3"
   },
@@ -511,6 +511,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a99a828e224165ef6ff74afd7967177ce2f279f30f5f9ef1db3758063b72efb9"
+   }
   }
  },
  "nbformat": 4,
