--- a/notebooks/case_study_neuro.ipynb
+++ b/notebooks/case_study_neuro.ipynb
@@ -13,7 +13,7 @@
    "id": "0984acbf-4b8a-4e62-958d-81601524a8b2",
    "metadata": {},
    "source": [
-    "This tutorial shows how cellDancer analyzes RNA velocity. The process includes (1) estimating RNA velocity, (2) deriving cell fates in embedding space, (3) estimating pseudotime, and (4) displaying predicted kinetics rates (transcription, splicing, and degradation rates), spliced mRNA abundance, and unspliced mRNA abundance in embedding space.\n",
+    "This tutorial shows how cellDancer analyzes RNA velocity. The process includes (1) estimating RNA velocity, (2) deriving cell fates on embedding space, (3) estimating pseudotime, and (4) displaying predicted kinetics rates (transcription, splicing, and degradation rates), spliced mRNA abundance, and unspliced mRNA abundance on embedding space.\n",
     "\n",
     "Below is the case study for the mouse hippocampal dentate gyrus neurogenesis. We follow the preprocessing methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3) to filter genes and cells. 18,140 cells with 2,159 genes were selected."
    ]
@@ -60,7 +60,7 @@
    "id": "cdbe57f4-eb57-4d22-9605-251e6b972185",
    "metadata": {},
    "source": [
-    "## Load mouse hippocampal dentate gyrus neurogenesis data"
+    "## Load data"
    ]
   },
   {
@@ -68,9 +68,8 @@
    "id": "b3e1cc0c-cab8-4b1b-aaa1-43b41484fc64",
    "metadata": {},
    "source": [
-    "The input data for cellDancer contains the abundances of unspliced RNA and spliced RNA. For the detail of obtaining the dataset and pre-processing steps, [Data Preparation](data_preprocessing.html) could be referred to.\n",
-    "\n",
-    "The data of mouse hippocampal dentate gyrus neurogenesis could be downloaded and unzipped from [DentateGyrus_cell_type_u_s.csv.zip](https://drive.google.com/file/d/1wm_frx0Zq6OVN4Eu8xXAX5ggHwXfg3xe/view?usp=sharing). It could be loaded by ```pd.read_csv('your_path/DentateGyrus_cell_type_u_s.csv')```. To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1', and 'embedding2.' For a detailed description of the data structure, [Data Preparation](data_preprocessing.html) could be referred to."
+    "The input data for cellDancer contains the preprocessed abundances of unspliced RNA and spliced RNA.\n",
+    "The data of mouse hippocampal dentate gyrus neurogenesis can be ownloaded from [DentateGyrus_cell_type_u_s.csv.zip](https://drive.google.com/file/d/1wm_frx0Zq6OVN4Eu8xXAX5ggHwXfg3xe/view?usp=sharing). To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1', and 'embedding2.' For a detailed description about the preprocessing and the data structure, refer to [Data Preparation](data_preprocessing.html)."
    ]
   },
   {
@@ -284,11 +283,7 @@
    "id": "70d16a3f-5f10-4fa6-b580-c334f89387b8",
    "metadata": {},
    "source": [
-    "```cd.velocity()``` could be used to estimate the velocity. \n",
-    "\n",
-    "Here, 30 genes in ```gene_list``` are estimated as an example. By default, the Deep Neural Network (DNN) will be trained at most 200 epochs. It checks the loss every 10 epochs. If the loss has no improvement in 3 checked epochs, the epoch will be ended. The network at that time will be used for the estimation. If supported by equipment, parallel computing could be used to improve the speed, ```n_jobs``` could be adjusted according to demand.\n",
-    "\n",
-    "Finally, the predicted unspliced and spliced reads, alpha, beta, and gamma are added to the original dataframe and returned."
+    "We use ```cd.velocity()``` to estimate the velocity. Here, 30 genes in ```gene_list``` are estimated as an example. The predicted unspliced and spliced reads, alpha, beta, and gamma are added to the dataframe."
    ]
   },
   {
@@ -616,7 +611,7 @@
    "id": "f44c7c88-ed37-45d3-83c4-b353145bd5f8",
    "metadata": {},
    "source": [
-    "## Visualize the phase portraits of sample genes "
+    "## Visualize the phase portraits"
    ]
   },
   {
@@ -624,7 +619,7 @@
    "id": "df3d670c-57dc-4bc9-846a-f25fb203bcee",
    "metadata": {},
    "source": [
-    "Let’s visualize the phase portrait of each gene with ```cdplt.scatter_gene()```."
+    "We visualize the phase portrait of each gene with ```cdplt.scatter_gene()```."
    ]
   },
   {
@@ -676,12 +671,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2673a7c6-c3bd-4f4c-86a0-889c96087c7d",
+   "id": "ba421ec5-7426-4fe0-bbf5-f1f8ea9efff1",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Load the velocity estimation result of all 2,159 genes"
+    "## Project the RNA velocity onto the embedding space"
    ]
   },
   {
@@ -689,7 +684,7 @@
    "id": "f38143c2-6822-4b06-a083-3bbb2e2410fb",
    "metadata": {},
    "source": [
-    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes, all the 2,159 genes have already been predicted and could be downloaded and unzipped from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing). The csv file could be loaded by ```pd.read_csv()```."
+    "To project the prediction of RNA velocity to velocity onto the embedding space and to estimate pseudotime by using all genes, predicted result can be downloaded from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing)."
    ]
   },
   {
@@ -709,22 +704,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba421ec5-7426-4fe0-bbf5-f1f8ea9efff1",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Project the RNA velocity to velocity vector flow in the embedding space"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "73f36922-b4c5-40a4-bf31-e9738ac177e9",
    "metadata": {},
    "source": [
-    "The projection of RNA velocity in the embedding space could be calculated with ```cd.compute_cell_velocity()```. If not specified, all genes in cellDancer_df will be used to calculate the projection of RNA velocity in the embedding space. We project the velocity vectors of the cells into the low-dimensional embedding space following the method of [velocyto](https://velocyto.org/velocyto.py/index.html#) and [scVelo](https://scvelo.readthedocs.io/).\n",
-    "\n",
-    "After the calculation, the projected direction in the embedding space, i.e. columns 'velocity1' and 'velocity2' will be added to the original dataframe. ```cdplt.scatter_cell()``` could be used to display the predicted direction in embedding space."
+    "We calculate the projection of RNA velocity on the embedding with ```cd.compute_cell_velocity()```. The projected direction on embedding space, i.e. columns 'velocity1' and 'velocity2' are added to the original dataframe. We use ```cdplt.scatter_cell()``` to display the predicted direction on embedding space."
    ]
   },
   {
@@ -781,7 +764,7 @@
    "id": "3c6a4d23-073b-46bf-9acf-5371cc049f4c",
    "metadata": {},
    "source": [
-    "Based on the projection of RNA velocity in embedding space, the pseudotime could be estimated with ```cd.pseudo_time()```."
+    "Based on the projection of RNA velocity on embedding space, we estimate the pseudotime with ```cd.pseudo_time()```."
    ]
   },
   {
@@ -809,7 +792,6 @@
     "                                          speed_up=(60,60),\n",
     "                                          n_paths = 5,\n",
     "                                          psrng_seeds_diffusion=[i for i in range(n_repeats)],\n",
-    "                                          activate_umap_paths_divider=False,\n",
     "                                          n_jobs=8)"
    ]
   },
@@ -857,7 +839,7 @@
    "id": "1248efb8-cbe9-47e0-b604-fe46ea7e32cf",
    "metadata": {},
    "source": [
-    "Let’s visualize the spliced RNA abundance of some sample genes along pseudotime with ```cdplt.scatter_gene()```."
+    "We visualize the spliced RNA abundance of some sample genes along pseudotime with ```cdplt.scatter_gene()```."
    ]
   },
   {
@@ -912,7 +894,7 @@
    "id": "b7156a67-5b12-4201-9d77-f1705a6f5cfa",
    "metadata": {},
    "source": [
-    "## Display the reaction rates, the abundance of unspliced RNA, and the abundance of spliced RNA in embedding space"
+    "## Visualize the reaction rates, the abundance of unspliced RNA, and the abundance of spliced RNA on embedding space"
    ]
   },
   {
@@ -920,7 +902,7 @@
    "id": "0164ffbd-3daf-4259-a55a-5d7c017cd3d9",
    "metadata": {},
    "source": [
-    "cellDancer provides other functions for visualization. In embedding space, we could visualize the predicted kinetics rates (transcription, splicing, and degradation rates), spliced mRNA abundance, and unspliced mRNA abundance in embedding space with ```cdplt.scatter_cell()```. The specific genes could be analyzed based on the kinetics' plot. Taking Ntrk2 as an example, the high alpha and low beta in astrocytes and OPCs is resulting in high expression of unspliced Ntrk2. The high beta and low gamma in dentate gyrus granule neurons and pyramidal neurons is resulting in high expression of spliced Ntrk2."
+    "cellDancer provides other functions for visualization. we show the predicted kinetics rates (transcription, splicing, and degradation rates), spliced mRNA abundance, and unspliced mRNA abundance on embedding space with ```cdplt.scatter_cell()```."
    ]
   },
   {
@@ -998,7 +980,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +994,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "610c699f0cd8c4f129acd9140687fff6866bed0eb8e82f249fc8848b827b628c"
+   }
   }
  },
  "nbformat": 4,
