--- a/notebooks/case_study_pancreas.ipynb
+++ b/notebooks/case_study_pancreas.ipynb
@@ -72,7 +72,7 @@
    "id": "5adce882-b0ac-4e05-96ff-5729eae7a3e4",
    "metadata": {},
    "source": [
-    "We used the preprocessed data [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) to predict the RNA velocities (see the details of pre-processing steps [Data Preparation](data_preprocessing.html)). \n",
+    "We use the preprocessed data [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) to predict the RNA velocities (see the details of pre-processing steps [Data Preparation](data_preprocessing.html)). \n",
     "Below are the command we used for the RNA velocity estimation. \n",
     "    \n",
     "    cellDancer_df = cd.velocity(cell_type_u_s, permutation_ratio=0.5, n_jobs=8)\n",
@@ -382,9 +382,7 @@
    "id": "e3d3dcdf-60fa-4b27-833b-6d3280b05a0c",
    "metadata": {},
    "source": [
-    "The projection of RNA velocity in the embedding space could be calculated with ```cd.compute_cell_velocity()```. If not specified, all genes in cellDancer_df will be used to calculate the projection of RNA velocity onto the embedding space.\n",
-    "\n",
-    "After the calculation, the projected direction in the embedding space, i.e. columns 'velocity1' and 'velocity2' will be added to the original dataframe. ```cdplt.scatter_cell()``` could be used to display the predicted direction in embedding space."
+    "We calculate the projection of RNA velocity on the embedding with ```cd.compute_cell_velocity()```. The projected direction on embedding space, i.e. columns 'velocity1' and 'velocity2' are added to the original dataframe. We use ```cdplt.scatter_cell()``` to display the predicted direction on embedding space."
    ]
   },
   {
@@ -432,7 +430,7 @@
    "id": "f76ab241-869c-4836-8ab7-ca5a71f26dce",
    "metadata": {},
    "source": [
-    "After obtaining the prediction result, ```cd.embedding_kinetic_para()``` could build UMAP based on the predicted alpha, beta, gamma, or all of the three."
+    "We use ```cd.embedding_kinetic_para()``` to build the UMAP based on the predicted alpha, predicted beta, predicted gamma, or all of the three."
    ]
   },
   {
@@ -453,7 +451,7 @@
    "id": "c9c9618f-ea2c-4d17-b8a8-cf8bf68772e7",
    "metadata": {},
    "source": [
-    "UMAP could be visualized with ```cdplt.plot_kinetic_para()``` depending on the selection of kinetic parameter(s). This result shows that our kinetic parameters could reflect cell sub-population. The spliced reads of one gene could be visualized when specifying the particular gene in ```cdplt.plot_kinetic_para()```."
+    "We visualize the UMAP of kinetic parameter(s) with ```cdplt.plot_kinetic_para()```."
    ]
   },
   {
