--- a/notebooks/case_study_pancreas_dynamo.ipynb
+++ b/notebooks/case_study_pancreas_dynamo.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the cellDancer predicted RNA velocity to dynamo adata using the API `export_velocity_to_dynamo()`."
+    "We import the cellDancer predicted RNA velocity to dynamo adata with API `export_velocity_to_dynamo()`."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The projection of RNA velocity imported from cellDancer onto the embedding space was done by using dynamo method `cell_velocities()`"
+    "The projection of RNA velocity imported from cellDancer onto the embedding space was done by using dynamo method `cell_velocities()`."
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use dynamo to learn and visualize the vector fields on UMAP."
+    "We use dynamo to learn and visualize the vector fields on UMAP."
    ]
   },
   {
@@ -578,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the expression levels of Arx and Pax4 on UMAP. "
+    "We use dynamo to plot the expression of Arx and Pax4 on UMAP. "
    ]
   },
   {
