--- a/notebooks/case_study_gastrulation.ipynb
+++ b/notebooks/case_study_gastrulation.ipynb
@@ -1168,7 +1168,7 @@
     "                               n_repeats=n_repeats, \n",
     "                               speed_up=(100,100),\n",
     "                               n_paths = 3,\n",
-    "                               plot_rep_trajs=True,\n",
+    "                               plot_long_trajs=True,\n",
     "                               psrng_seeds_diffusion=[i for i in range(n_repeats)],\n",
     "                               n_jobs=8)"
    ]
