--- a/notebooks/case_study_gastrulation.ipynb
+++ b/notebooks/case_study_gastrulation.ipynb
@@ -11,13 +11,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5f7044a-3602-4b93-85ee-144515b32eb7",
    "metadata": {},
    "source": [
     "This tutorial shows how cellDancer analyzes RNA velocity. The process includes (1) estimating RNA velocity, (2) deriving cell fates on embedding space, and (3) estimating pseudotime.\n",
     " \n",
-    "This tutorial also demonstrates cellDancer's ability to resolve the difficulty of predicting the velocity of genes with transcriptional boost mentioned by [Bergen et al.](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02414-y)\n",
+    "This tutorial also demonstrates cellDancer's ability to resolve the difficulty of predicting the velocity of genes with transcriptional boost mentioned by [Barile et al.](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02414-y)\n",
     "\n",
     "Below is the case study for gastrulation erythroid maturation. We select 12,329 cells with 2,000 genes from haemato-endothelial progenitors, blood progenitors 1/2, and erythroid 1/2/3. The embryonic days are selected from E7.0, E7.25, E7.5, E7.75, E8.0, E8.25, and E8.5."
    ]
