--- a/notebooks/case_study_neuro.ipynb
+++ b/notebooks/case_study_neuro.ipynb
@@ -9,13 +9,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0984acbf-4b8a-4e62-958d-81601524a8b2",
    "metadata": {},
    "source": [
     "This tutorial shows how cellDancer analyzes RNA velocity. The process includes (1) estimating RNA velocity, (2) deriving cell fates on embedding space, (3) estimating pseudotime, and (4) displaying predicted kinetics rates (transcription, splicing, and degradation rates), spliced mRNA abundance, and unspliced mRNA abundance on embedding space.\n",
     "\n",
-    "Below is the case study for the mouse hippocampal dentate gyrus neurogenesis. We follow the preprocessing methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3) to filter genes and cells. 18,140 cells with 2,159 genes were selected."
+    "Below is the case study for the mouse hippocampal dentate gyrus neurogenesis. We follow the preprocessing methods of [La Manno et al.](https://www.nature.com/articles/s41586-018-0414-6) to filter genes and cells. 18,140 cells with 2,159 genes were selected."
    ]
   },
   {
